<resources>
    <string name="app_name">Moravian Daily Texts</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <string name="notify_preferences_group">Notifications</string>

    <string name="notify_checkbox_key">notify_checkbox_key</string>
    <string name="notify_preferences_title">Receive Notifications</string>
    <string name="notify_preferences_summary">Receive updates for new Daily Texts</string>

    <string name="notify_time_key">notify_time_key</string>
    <string name="notify_time_title">Time</string>
    <string name="notify_time_summary">Set time of notification</string>

    <string name="made_by_text">This app was made independently independently of the Moravian Church</string>
    <string name="owned_by_text">The Daily Texts and Moravian Logo are owned by the Moravian Church</string>
    <string name="go_visit_text">For more information on the Moravian Church and the Daily Texts please visit http://www.moravian.org</string>
</resources>
