<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/about_legal_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/made_by_text"/>

    <TextView
        android:id="@+id/owned_by_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/owned_by_text"/>

    <TextView
        android:id="@+id/go_visit_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_visit_text"/>

</LinearLayout>